--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     implementation 'androidx.compose.material3:material3'
     implementation "androidx.compose.ui:ui-util"
 
+    // Navigation
+    implementation 'androidx.navigation:navigation-compose:2.6.0'
+
     // Tests
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
