--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,8 @@
 buildscript {
+    ext {
+        retrofit_version = '2.9.0'
+        hilt_version = '2.44.2'
+    }
     repositories {
         google()
         mavenCentral()
@@ -7,5 +11,6 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
